wrapped an anchor in a button for the job posts page, broke in firefox. fixed.

--- a/_sass/_jobs/_base.scss
+++ b/_sass/_jobs/_base.scss
@@ -52,10 +52,15 @@
         &:hover {
             color: $accent-dark;
         }
+        button {
+            &:hover {
+                color: white;
+            }
+        }
     }
     button {
         margin: 3em 0 0;
-        padding: 1.25em 0em;
+        padding: 1.25em 3em;
         color: $grey-dark;
         @include transition(all, 250ms, ease-in-out);
         &:hover {
